# nas-webserver

./: .gitignore  CMakeLists.txt  LICENSE  README.md  SECURITY.md  build-deb.sh  nas-web-dbgsym_1.2.5_amd64.ddeb  nas-web.service  nas-web_1.2.5_amd64.buildinfo  nas-web_1.2.5_amd64.changes  nas-web_1.2.5_amd64.deb  readme.md
.github/: FUNDING.yml
.github/codeql/: codeql-config.yml
.github/workflows/: build.yml  codeql.yml
conf/: nas-web.conf
debian/: README.Debian  changelog  copyright  nas-web.conffiles  nas-web.install  nas-web.postinst  nas-web.prerm  rules
include/: admin_panel.h  admin_tls_guard.hh  autoban.hh  nas_db.hh  np_config.hh  np_types.hh  pwa_assets.h  waf.hh  waf_regex.hh
packaging/debian/DEBIAN/: postinst  prerm
packaging/debian/lib/systemd/system/: nas-web.service
qnap-like-dashboard/: install  package-lock.json  package.json
qnap-like-dashboard/backend/: server.cjs  vite.config.ts
qnap-like-dashboard/backend/src/: App.vue  locales.js  main.ts  router.js
qnap-like-dashboard/backend/src/api/: config.js  docker.cjs  network-dynamicdns.cjs  services.cjs  storage.cjs  system (kopia).js  system-logs.cjs  system.cjs
qnap-like-dashboard/backend/src/assets/: main.scss
qnap-like-dashboard/backend/src/components/: Navbar.vue  Sidebar.vue
qnap-like-dashboard/backend/src/components/Dashboard/: DockerWidget.vue  NetworkWidget.vue  ServicesWidget.vue  SmartWidget.vue  SystemInfoWidget.vue
qnap-like-dashboard/backend/src/components/FileManager/: DirectoryTree.vue
qnap-like-dashboard/backend/src/components/FileManager/modals/: PropertiesModal.vue  RenameModal.vue
qnap-like-dashboard/backend/src/components/network/: Interfaces.vue
qnap-like-dashboard/backend/src/components/network/DynamicDns/: providers.js
qnap-like-dashboard/backend/src/components/network/vpn/: Vpn.vue
qnap-like-dashboard/backend/src/components/services/Docker/: ContainerStats.vue  DockerBackup.vue  DockerCompose.vue  DockerNetworks.vue  DockerVolumes.vue  FileEditor.vue
qnap-like-dashboard/backend/src/components/services/Samba/: SambaShares.vue
qnap-like-dashboard/backend/src/components/services/Ssh/: SshSettings.vue
qnap-like-dashboard/backend/src/components/storage/: StorageFilesystems (kopia).vue
qnap-like-dashboard/backend/src/components/storage/smart/: SmartAttributes.vue  StorageSmartDevices.vue  TestHistory.vue
qnap-like-dashboard/backend/src/components/system/: Users.vue
qnap-like-dashboard/backend/src/components/system/Backup/: Backup.vue  Restore.vue
qnap-like-dashboard/backend/src/components/system/updates/: UpdateStatus.vue  Updates.vue
qnap-like-dashboard/backend/src/database/: sqlite-service.js
qnap-like-dashboard/backend/src/locales/: en.js  pl.js
qnap-like-dashboard/backend/src/services/: AuthService.js
qnap-like-dashboard/backend/src/views/: LoginView.vue
qnap-like-dashboard/debian/: bak.conffiles  changelog  config  control  copyright  debhelper-build-stamp  files  nas-docker-autostart.service  nas-panel.dirs  nas-panel.install  nas-panel.postrm.debhelper  nas-panel.substvars  nas-webdav  nas-webdav.cpp  nas-webdav.service  postinst  rules
qnap-like-dashboard/debian/.debhelper/nas-panel/: dbgsym-build-ids
qnap-like-dashboard/debian/.debhelper/nas-panel/dbgsym-root/DEBIAN/: control  md5sums
qnap-like-dashboard/debian/configs/: settings.json
qnap-like-dashboard/debian/nas-panel/DEBIAN/: conffiles  control  md5sums  postinst  postrm  prerm  templates
qnap-like-dashboard/debian/nas-panel/etc/nas-panel/: webdav.conf
qnap-like-dashboard/debian/nas-panel/lib/systemd/system/: nas-api.service  nas-docker-autosave.service
qnap-like-dashboard/debian/nas-panel/opt/nas-panel/: README.md  package-lock.json  package.json
qnap-like-dashboard/debian/nas-panel/opt/nas-panel/assets/: Antivirus-CIHsWO7Y.js  Antivirus-CcR1lsHF.css  Backup-BArS4WzJ.css  Backup-Cuu9ocj9.js  CpuWidget-BS5_E90-.css  CpuWidget-qVT95rOp.js  CronJobs-CfqLuP56.css  CronJobs-DRCE6_ch.js  Details-ChWBBPEf.js  Details-DXV0G3lP.css  Details-Dq52WHhr.js  Details-_Cp7ftZU.css  DockerStatus-CZYOcAAu.js  DockerStatus-Gfd2isyZ.css  (+59 more)
scripts/: dns-hook-example.sh  jwt_auth.js
src/cache/: cache.cc
src/config/: config_parser.cc
src/core/: server.cc
src/http/: h2_handler.cc  parser.cc
src/optimization/: optimization.cc
src/scripting/: lua_engine.cc  v8_engine.cc
src/security/: ratelimit.cc
src/static/: static_handler.cc
src/tls/: acme.cc
tests/: test_cache.cc  test_parser.cc  test_waf_regex.cc
tests/integration/: test_deb_package.sh
webserver/: .gitignore  CMakeLists.txt  Makefile  build-deb.sh  nas-web  nas-web.service
webserver/debian/: changelog  control  debhelper-build-stamp  files  nas-web.dirs  nas-web.install  nas-web.postinst  nas-web.postrm  nas-web.postrm.debhelper  nas-web.prerm  nas-web.service  nas-web.substvars  postinst  prerm  rules  watch
webserver/debian/.debhelper/nas-web/: dbgsym-build-ids
webserver/debian/.debhelper/nas-web/dbgsym-root/DEBIAN/: control  md5sums
webserver/debian/.debhelper/nas-web/dbgsym-root/usr/share/doc/: nas-web-dbgsym
webserver/debian/config/: benchmark.conf  nas-web.conf  nas-web.conf.default
webserver/debian/nas-web/DEBIAN/: control  md5sums  postrm
webserver/debian/nas-web/usr/share/doc/nas-web/: copyright
webserver/include/: admin_panel.h  autoban.hh  np_config.hh  np_types.hh  waf.hh  waf_regex.hh
webserver/packaging/debian/DEBIAN/: control
webserver/scripts/: admin_acl.lua  security_headers.js
webserver/security/: isolation.c  isolation.h  monitoring.c  monitoring.h  secure_deploy.sh
webserver/src/: benchmark.c  config.c  config.h  connection.h  error.c  error.h  http2.c  logging.c  logging.h  main.c  profiler.c  profiler.h  router.c  router.h  threadpool.c  threadpool.h
webserver/src/cache/: cache.cc
webserver/src/core/: server.cc
webserver/src/http/: h3_handler.cc
webserver/src/proxy/: upstream.cc
webserver/src/scripting/: middleware_pipeline.cc
webserver/src/static/: static_handler.cc
webserver/src/tls/: acme.cc
webserver/tests/: test_ratelimit.cc
(+64 files in other folders)
